manifests/application/01-namespace.yaml
# Namespace para aplicação FIAP SOAT
apiVersion: v1
kind: Namespace
metadata:
  name: fiap-soat
  labels:
    name: fiap-soat
    project: fiap-soat-fase3
    environment: dev
  annotations:
    description: "FIAP SOAT - Fase 3 - Sistema de Pedidos"
